--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Pattaya&display=swap);
-/*! tailwindcss v2.1.2 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.2 | MIT License | https://tailwindcss.com */
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -339,7 +339,7 @@ body {
   box-sizing: border-box; /* 1 */
   border-width: 0; /* 2 */
   border-style: solid; /* 2 */
-  border-color: #e5e7eb; /* 2 */
+  border-color: currentColor; /* 2 */
 }
 /*
  * Ensure horizontal rules are visible by default
@@ -428,11 +428,20 @@ samp {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 /**
- * Make replaced elements `display: block` by default as that's
- * the behavior you want almost all of the time. Inspired by
- * CSS Remedy, with `svg` added as well.
+ * 1. Make replaced elements `display: block` by default as that's
+ *    the behavior you want almost all of the time. Inspired by
+ *    CSS Remedy, with `svg` added as well.
  *
- * https://github.com/mozdevs/cssremedy/issues/14
+ *    https://github.com/mozdevs/cssremedy/issues/14
+ * 
+ * 2. Add `vertical-align: middle` to align replaced elements more
+ *    sensibly by default when overriding `display` by adding a
+ *    utility like `inline`.
+ *
+ *    This can trigger a poorly considered linting error in some
+ *    tools but is included by design.
+ * 
+ *    https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
  */
 img,
 svg,
@@ -442,8 +451,8 @@ audio,
 iframe,
 embed,
 object {
-  display: block;
-  vertical-align: middle;
+  display: block; /* 1 */
+  vertical-align: middle; /* 2 */
 }
 /**
  * Constrain images and videos to the parent width and preserve
@@ -456,7 +465,17 @@ video {
   max-width: 100%;
   height: auto;
 }
-*{
+*, ::before, ::after{
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-shadow: 0 0 #0000;
 	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
 	--tw-ring-offset-width: 0px;
@@ -464,6 +483,26 @@ video {
 	--tw-ring-color: rgba(59, 130, 246, 0.5);
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
+	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
+	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
+	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
+	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
+	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
+	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
+	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
+	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+	--tw-backdrop-blur: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-brightness: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-contrast: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-grayscale: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-invert: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
+	--tw-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 [type='text'],[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select{
 	-webkit-appearance: none;
@@ -940,14 +979,14 @@ select{
 .prose > :last-child{
 	margin-bottom: 0;
 }
-.relative{
-	position: relative;
+.fixed{
+	position: fixed;
 }
 .absolute{
 	position: absolute;
 }
-.fixed{
-	position: fixed;
+.relative{
+	position: relative;
 }
 .sticky{
 	position: sticky;
@@ -1015,6 +1054,12 @@ select{
 }
 .col-span-1{
 	grid-column: span 1 / span 1;
+}
+.col-span-3{
+	grid-column: span 3 / span 3;
+}
+.col-span-2{
+	grid-column: span 2 / span 2;
 }
 .float-right{
 	float: right;
@@ -1122,6 +1167,9 @@ select{
 }
 .mb-8{
 	margin-bottom: 2rem;
+}
+.mt-1\.5{
+	margin-top: 0.375rem;
 }
 .mr-4{
 	margin-right: 1rem;
@@ -1360,16 +1408,6 @@ select{
 .flex-grow{
 	flex-grow: 1;
 }
-.transform{
-	--tw-translate-x: 0;
-	--tw-translate-y: 0;
-	--tw-rotate: 0;
-	--tw-skew-x: 0;
-	--tw-skew-y: 0;
-	--tw-scale-x: 1;
-	--tw-scale-y: 1;
-	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .origin-top-left{
 	transform-origin: top left;
 }
@@ -1381,57 +1419,77 @@ select{
 }
 .translate-y-4{
 	--tw-translate-y: 1rem;
+	transform: var(--tw-transform);
 }
 .translate-y-0{
 	--tw-translate-y: 0px;
+	transform: var(--tw-transform);
 }
 .-translate-x-1\/2{
 	--tw-translate-x: -50%;
+	transform: var(--tw-transform);
 }
 .translate-y-1\/2{
 	--tw-translate-y: 50%;
+	transform: var(--tw-transform);
 }
 .translate-x-72{
 	--tw-translate-x: 18rem;
+	transform: var(--tw-transform);
 }
 .translate-x-96{
 	--tw-translate-x: 24rem;
+	transform: var(--tw-transform);
 }
 .-translate-y-1\/2{
 	--tw-translate-y: -50%;
+	transform: var(--tw-transform);
 }
 .-translate-x-20{
 	--tw-translate-x: -5rem;
+	transform: var(--tw-transform);
 }
 .-translate-y-2{
 	--tw-translate-y: -0.5rem;
+	transform: var(--tw-transform);
 }
 .translate-y-6{
 	--tw-translate-y: 1.5rem;
+	transform: var(--tw-transform);
 }
 .-translate-x-3{
 	--tw-translate-x: -0.75rem;
+	transform: var(--tw-transform);
 }
 .-translate-y-0\.5{
 	--tw-translate-y: -0.125rem;
+	transform: var(--tw-transform);
 }
 .-translate-y-0{
 	--tw-translate-y: 0px;
+	transform: var(--tw-transform);
 }
 .rotate-90{
 	--tw-rotate: 90deg;
+	transform: var(--tw-transform);
 }
 .scale-95{
 	--tw-scale-x: .95;
 	--tw-scale-y: .95;
+	transform: var(--tw-transform);
 }
 .scale-100{
 	--tw-scale-x: 1;
 	--tw-scale-y: 1;
+	transform: var(--tw-transform);
 }
 .scale-90{
 	--tw-scale-x: .9;
 	--tw-scale-y: .9;
+	transform: var(--tw-transform);
+}
+.transform{
+	transform: var(--tw-transform);
 }
 @-webkit-keyframes ping{
 	75%, 100%{
@@ -1479,23 +1537,23 @@ select{
 .flex-wrap{
 	flex-wrap: wrap;
 }
-.items-center{
-	align-items: center;
-}
 .items-end{
 	align-items: flex-end;
 }
-.justify-between{
-	justify-content: space-between;
+.items-center{
+	align-items: center;
 }
-.justify-center{
-	justify-content: center;
+.justify-start{
+	justify-content: flex-start;
 }
 .justify-end{
 	justify-content: flex-end;
 }
-.justify-start{
-	justify-content: flex-start;
+.justify-center{
+	justify-content: center;
+}
+.justify-between{
+	justify-content: space-between;
 }
 .gap-6{
 	gap: 1.5rem;
@@ -1606,20 +1664,28 @@ select{
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
-.overflow-hidden{
-	overflow: hidden;
-}
-.overflow-y-hidden{
-	overflow-y: hidden;
-}
-.overflow-y-auto{
-	overflow-y: auto;
+.divide-y > :not([hidden]) ~ :not([hidden]){
+	--tw-divide-y-reverse: 0;
+	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 .overflow-auto{
 	overflow: auto;
 }
+.overflow-hidden{
+	overflow: hidden;
+}
 .overflow-visible{
 	overflow: visible;
+}
+.overflow-x-auto{
+	overflow-x: auto;
+}
+.overflow-y-auto{
+	overflow-y: auto;
+}
+.overflow-y-hidden{
+	overflow-y: hidden;
 }
 .truncate{
 	overflow: hidden;
@@ -1660,6 +1726,14 @@ select{
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
 }
+.rounded-l-lg{
+	border-top-left-radius: 0.5rem;
+	border-bottom-left-radius: 0.5rem;
+}
+.rounded-r-lg{
+	border-top-right-radius: 0.5rem;
+	border-bottom-right-radius: 0.5rem;
+}
 .rounded-tr-lg{
 	border-top-right-radius: 0.5rem;
 }
@@ -1693,8 +1767,17 @@ select{
 .border-r-4{
 	border-right-width: 4px;
 }
+.border-r-0{
+	border-right-width: 0px;
+}
+.border-l-2{
+	border-left-width: 2px;
+}
 .border-r{
 	border-right-width: 1px;
+}
+.border-none{
+	border-style: none;
 }
 .border-gray-300{
 	--tw-border-opacity: 1;
@@ -1726,6 +1809,14 @@ select{
 .border-gray-600{
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+.border-purple-600{
+	--tw-border-opacity: 1;
+	border-color: rgba(124, 58, 237, var(--tw-border-opacity));
+}
+.border-blue-600{
+	--tw-border-opacity: 1;
+	border-color: rgba(37, 99, 235, var(--tw-border-opacity));
 }
 .border-gray-400{
 	--tw-border-opacity: 1;
@@ -1779,6 +1870,10 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-purple-600{
+	--tw-bg-opacity: 1;
+	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
 .bg-green-100{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
@@ -1814,10 +1909,6 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
 }
-.bg-purple-600{
-	--tw-bg-opacity: 1;
-	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
-}
 .bg-purple-300{
 	--tw-bg-opacity: 1;
 	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
@@ -1845,13 +1936,13 @@ select{
 .fill-current{
 	fill: currentColor;
 }
-.object-cover{
-	-o-object-fit: cover;
-	   object-fit: cover;
-}
 .object-contain{
 	-o-object-fit: contain;
 	   object-fit: contain;
+}
+.object-cover{
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 .object-top{
 	-o-object-position: top;
@@ -1937,6 +2028,10 @@ select{
 .py-1\.5{
 	padding-top: 0.375rem;
 	padding-bottom: 0.375rem;
+}
+.px-1\.5{
+	padding-left: 0.375rem;
+	padding-right: 0.375rem;
 }
 .py-16{
 	padding-top: 4rem;
@@ -2170,6 +2265,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(167, 139, 250, var(--tw-text-opacity));
 }
+.text-green-700{
+	--tw-text-opacity: 1;
+	color: rgba(4, 120, 87, var(--tw-text-opacity));
+}
 .text-blue-700{
 	--tw-text-opacity: 1;
 	color: rgba(29, 78, 216, var(--tw-text-opacity));
@@ -2265,6 +2364,10 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(0, 0, 0, var(--tw-ring-opacity));
 }
+.ring-purple-300{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(196, 181, 253, var(--tw-ring-opacity));
+}
 .ring-gray-400{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(156, 163, 175, var(--tw-ring-opacity));
@@ -2277,16 +2380,7 @@ select{
 	--tw-ring-opacity: 0.05;
 }
 .filter{
-	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
-	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
-	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
-	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
-	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
-	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
-	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
-	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
-	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
-	filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+	filter: var(--tw-filter);
 }
 .transition{
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -2316,9 +2410,6 @@ select{
 	transition-duration: 150ms;
 }
 .duration-150{
-	transition-duration: 150ms;
-}
-.duration{
 	transition-duration: 150ms;
 }
 .duration-200{
@@ -2354,17 +2445,21 @@ select{
 }
 .hover\:-translate-y-2:hover{
 	--tw-translate-y: -0.5rem;
+	transform: var(--tw-transform);
 }
 .hover\:rotate-3:hover{
 	--tw-rotate: 3deg;
+	transform: var(--tw-transform);
 }
 .hover\:scale-110:hover{
 	--tw-scale-x: 1.1;
 	--tw-scale-y: 1.1;
+	transform: var(--tw-transform);
 }
 .hover\:scale-150:hover{
 	--tw-scale-x: 1.5;
 	--tw-scale-y: 1.5;
+	transform: var(--tw-transform);
 }
 .hover\:border-gray-300:hover{
 	--tw-border-opacity: 1;
@@ -2394,6 +2489,10 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
+.hover\:bg-purple-700:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
+}
 .hover\:bg-purple-400:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
@@ -2401,10 +2500,6 @@ select{
 .hover\:bg-purple-100:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
-}
-.hover\:bg-purple-700:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
 }
 .hover\:bg-gray-300:hover{
 	--tw-bg-opacity: 1;
@@ -2559,12 +2654,19 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity));
 }
+.focus\:ring-purple-500:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(139, 92, 246, var(--tw-ring-opacity));
+}
 .focus\:ring-indigo-600:focus{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(79, 70, 229, var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
 	--tw-ring-opacity: 0.5;
+}
+.focus\:ring-offset-0:focus{
+	--tw-ring-offset-width: 0px;
 }
 .active\:bg-gray-100:active{
 	--tw-bg-opacity: 1;
@@ -2581,6 +2683,10 @@ select{
 .active\:bg-gray-50:active{
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.active\:bg-purple-600:active{
+	--tw-bg-opacity: 1;
+	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
 }
 .active\:text-gray-700:active{
 	--tw-text-opacity: 1;
@@ -2602,10 +2708,12 @@ select{
 }
 .group:hover .group-hover\:translate-x-0{
 	--tw-translate-x: 0px;
+	transform: var(--tw-transform);
 }
 .group:hover .group-hover\:scale-110{
 	--tw-scale-x: 1.1;
 	--tw-scale-y: 1.1;
+	transform: var(--tw-transform);
 }
 .group:hover .group-hover\:bg-gray-100{
 	--tw-bg-opacity: 1;
@@ -2662,17 +2770,21 @@ select{
 .dark .dark\:w-56{
 	width: 14rem;
 }
+.dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]){
+	--tw-divide-opacity: 1;
+	border-color: rgba(55, 65, 81, var(--tw-divide-opacity));
+}
 .dark .dark\:border-gray-500{
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
-.dark .dark\:border-purple-600{
-	--tw-border-opacity: 1;
-	border-color: rgba(124, 58, 237, var(--tw-border-opacity));
-}
 .dark .dark\:border-gray-700{
 	--tw-border-opacity: 1;
 	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+.dark .dark\:border-purple-600{
+	--tw-border-opacity: 1;
+	border-color: rgba(124, 58, 237, var(--tw-border-opacity));
 }
 .dark .dark\:border-gray-800{
 	--tw-border-opacity: 1;
@@ -2685,6 +2797,10 @@ select{
 .dark .dark\:bg-gray-800{
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-gray-700{
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-green-500{
 	--tw-bg-opacity: 1;
@@ -2702,13 +2818,13 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
-.dark .dark\:bg-gray-700{
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
 .dark .dark\:bg-purple-600{
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-green-700{
+	--tw-bg-opacity: 1;
+	background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-purple-700{
 	--tw-bg-opacity: 1;
@@ -2736,6 +2852,14 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
+.dark .dark\:text-gray-300{
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.dark .dark\:text-red-400{
+	--tw-text-opacity: 1;
+	color: rgba(248, 113, 113, var(--tw-text-opacity));
+}
 .dark .dark\:text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -2755,10 +2879,6 @@ select{
 .dark .dark\:text-gray-600{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.dark .dark\:text-gray-300{
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-500{
 	--tw-text-opacity: 1;
@@ -2885,6 +3005,9 @@ select{
 	.sm\:ml-6{
 		margin-left: 1.5rem;
 	}
+	.sm\:mt-auto{
+		margin-top: auto;
+	}
 	.sm\:block{
 		display: block;
 	}
@@ -2923,29 +3046,38 @@ select{
 	}
 	.sm\:translate-y-0{
 		--tw-translate-y: 0px;
+		transform: var(--tw-transform);
 	}
 	.sm\:scale-95{
 		--tw-scale-x: .95;
 		--tw-scale-y: .95;
+		transform: var(--tw-transform);
 	}
 	.sm\:scale-100{
 		--tw-scale-x: 1;
 		--tw-scale-y: 1;
+		transform: var(--tw-transform);
 	}
-	.sm\:items-center{
-		align-items: center;
+	.sm\:grid-cols-9{
+		grid-template-columns: repeat(9, minmax(0, 1fr));
 	}
 	.sm\:items-start{
 		align-items: flex-start;
 	}
-	.sm\:justify-between{
-		justify-content: space-between;
+	.sm\:items-center{
+		align-items: center;
+	}
+	.sm\:justify-start{
+		justify-content: flex-start;
+	}
+	.sm\:justify-end{
+		justify-content: flex-end;
 	}
 	.sm\:justify-center{
 		justify-content: center;
 	}
-	.sm\:justify-start{
-		justify-content: flex-start;
+	.sm\:justify-between{
+		justify-content: space-between;
 	}
 	.sm\:rounded-lg{
 		border-radius: 0.5rem;
@@ -3082,6 +3214,7 @@ select{
 	}
 	.md\:translate-x-0{
 		--tw-translate-x: 0px;
+		transform: var(--tw-transform);
 	}
 	.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
