--- a/public/css/app.css
+++ b/public/css/app.css
@@ -979,6 +979,185 @@ select{
 .prose > :last-child{
 	margin-bottom: 0;
 }
+.prose-sm{
+	font-size: 0.875rem;
+	line-height: 1.7142857;
+}
+.prose-sm p{
+	margin-top: 1.1428571em;
+	margin-bottom: 1.1428571em;
+}
+.prose-sm [class~="lead"]{
+	font-size: 1.2857143em;
+	line-height: 1.5555556;
+	margin-top: 0.8888889em;
+	margin-bottom: 0.8888889em;
+}
+.prose-sm blockquote{
+	margin-top: 1.3333333em;
+	margin-bottom: 1.3333333em;
+	padding-left: 1.1111111em;
+}
+.prose-sm h1{
+	font-size: 2.1428571em;
+	margin-top: 0;
+	margin-bottom: 0.8em;
+	line-height: 1.2;
+}
+.prose-sm h2{
+	font-size: 1.4285714em;
+	margin-top: 1.6em;
+	margin-bottom: 0.8em;
+	line-height: 1.4;
+}
+.prose-sm h3{
+	font-size: 1.2857143em;
+	margin-top: 1.5555556em;
+	margin-bottom: 0.4444444em;
+	line-height: 1.5555556;
+}
+.prose-sm h4{
+	margin-top: 1.4285714em;
+	margin-bottom: 0.5714286em;
+	line-height: 1.4285714;
+}
+.prose-sm img{
+	margin-top: 1.7142857em;
+	margin-bottom: 1.7142857em;
+}
+.prose-sm video{
+	margin-top: 1.7142857em;
+	margin-bottom: 1.7142857em;
+}
+.prose-sm figure{
+	margin-top: 1.7142857em;
+	margin-bottom: 1.7142857em;
+}
+.prose-sm figure > *{
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.prose-sm figure figcaption{
+	font-size: 0.8571429em;
+	line-height: 1.3333333;
+	margin-top: 0.6666667em;
+}
+.prose-sm code{
+	font-size: 0.8571429em;
+}
+.prose-sm h2 code{
+	font-size: 0.9em;
+}
+.prose-sm h3 code{
+	font-size: 0.8888889em;
+}
+.prose-sm pre{
+	font-size: 0.8571429em;
+	line-height: 1.6666667;
+	margin-top: 1.6666667em;
+	margin-bottom: 1.6666667em;
+	border-radius: 0.25rem;
+	padding-top: 0.6666667em;
+	padding-right: 1em;
+	padding-bottom: 0.6666667em;
+	padding-left: 1em;
+}
+.prose-sm ol{
+	margin-top: 1.1428571em;
+	margin-bottom: 1.1428571em;
+}
+.prose-sm ul{
+	margin-top: 1.1428571em;
+	margin-bottom: 1.1428571em;
+}
+.prose-sm li{
+	margin-top: 0.2857143em;
+	margin-bottom: 0.2857143em;
+}
+.prose-sm ol > li{
+	padding-left: 1.5714286em;
+}
+.prose-sm ol > li::before{
+	left: 0;
+}
+.prose-sm ul > li{
+	padding-left: 1.5714286em;
+}
+.prose-sm ul > li::before{
+	height: 0.3571429em;
+	width: 0.3571429em;
+	top: calc(0.8571429em - 0.1785714em);
+	left: 0.2142857em;
+}
+.prose-sm > ul > li p{
+	margin-top: 0.5714286em;
+	margin-bottom: 0.5714286em;
+}
+.prose-sm > ul > li > *:first-child{
+	margin-top: 1.1428571em;
+}
+.prose-sm > ul > li > *:last-child{
+	margin-bottom: 1.1428571em;
+}
+.prose-sm > ol > li > *:first-child{
+	margin-top: 1.1428571em;
+}
+.prose-sm > ol > li > *:last-child{
+	margin-bottom: 1.1428571em;
+}
+.prose-sm ul ul, .prose-sm ul ol, .prose-sm ol ul, .prose-sm ol ol{
+	margin-top: 0.5714286em;
+	margin-bottom: 0.5714286em;
+}
+.prose-sm hr{
+	margin-top: 2.8571429em;
+	margin-bottom: 2.8571429em;
+}
+.prose-sm hr + *{
+	margin-top: 0;
+}
+.prose-sm h2 + *{
+	margin-top: 0;
+}
+.prose-sm h3 + *{
+	margin-top: 0;
+}
+.prose-sm h4 + *{
+	margin-top: 0;
+}
+.prose-sm table{
+	font-size: 0.8571429em;
+	line-height: 1.5;
+}
+.prose-sm thead th{
+	padding-right: 1em;
+	padding-bottom: 0.6666667em;
+	padding-left: 1em;
+}
+.prose-sm thead th:first-child{
+	padding-left: 0;
+}
+.prose-sm thead th:last-child{
+	padding-right: 0;
+}
+.prose-sm tbody td{
+	padding-top: 0.6666667em;
+	padding-right: 1em;
+	padding-bottom: 0.6666667em;
+	padding-left: 1em;
+}
+.prose-sm tbody td:first-child{
+	padding-left: 0;
+}
+.prose-sm tbody td:last-child{
+	padding-right: 0;
+}
+.prose-sm > :first-child{
+	margin-top: 0;
+}
+.prose-sm > :last-child{
+	margin-bottom: 0;
+}
 .fixed{
 	position: fixed;
 }
@@ -1049,6 +1228,9 @@ select{
 .col-span-6{
 	grid-column: span 6 / span 6;
 }
+.col-span-2{
+	grid-column: span 2 / span 2;
+}
 .col-span-4{
 	grid-column: span 4 / span 4;
 }
@@ -1057,9 +1239,6 @@ select{
 }
 .col-span-3{
 	grid-column: span 3 / span 3;
-}
-.col-span-2{
-	grid-column: span 2 / span 2;
 }
 .float-right{
 	float: right;
@@ -1087,6 +1266,10 @@ select{
 .my-3{
 	margin-top: 0.75rem;
 	margin-bottom: 0.75rem;
+}
+.mx-1{
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
 }
 .mx-2{
 	margin-left: 0.5rem;
@@ -1194,6 +1377,9 @@ select{
 }
 .mt-48{
 	margin-top: 12rem;
+}
+.mb-5{
+	margin-bottom: 1.25rem;
 }
 .mt-16{
 	margin-top: 4rem;
@@ -1390,14 +1576,14 @@ select{
 .max-w-xl{
 	max-width: 36rem;
 }
+.max-w-6xl{
+	max-width: 72rem;
+}
 .max-w-3xl{
 	max-width: 48rem;
 }
 .max-w-5xl{
 	max-width: 64rem;
-}
-.max-w-6xl{
-	max-width: 72rem;
 }
 .flex-1{
 	flex: 1 1 0%;
@@ -1525,6 +1711,9 @@ select{
 .grid-cols-1{
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-8{
+	grid-template-columns: repeat(8, minmax(0, 1fr));
+}
 .grid-cols-2{
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1589,21 +1778,6 @@ select{
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.space-y-8 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-x-6 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-x-reverse: 0;
-	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-y-reverse: 0;
 	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1613,6 +1787,21 @@ select{
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-y-reverse: 0;
+	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
@@ -1663,6 +1852,11 @@ select{
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+.space-x-1\.5 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.375rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
 	--tw-divide-y-reverse: 0;
@@ -1809,6 +2003,14 @@ select{
 .border-gray-600{
 	--tw-border-opacity: 1;
 	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+.border-white{
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+.border-purple-500{
+	--tw-border-opacity: 1;
+	border-color: rgba(139, 92, 246, var(--tw-border-opacity));
 }
 .border-purple-600{
 	--tw-border-opacity: 1;
@@ -2037,6 +2239,10 @@ select{
 	padding-top: 4rem;
 	padding-bottom: 4rem;
 }
+.py-2\.5{
+	padding-top: 0.625rem;
+	padding-bottom: 0.625rem;
+}
 .pt-6{
 	padding-top: 1.5rem;
 }
@@ -2070,6 +2276,12 @@ select{
 .pr-2{
 	padding-right: 0.5rem;
 }
+.pl-2{
+	padding-left: 0.5rem;
+}
+.pl-8{
+	padding-left: 2rem;
+}
 .pt-8{
 	padding-top: 2rem;
 }
@@ -2081,12 +2293,6 @@ select{
 }
 .pb-2{
 	padding-bottom: 0.5rem;
-}
-.pl-2{
-	padding-left: 0.5rem;
-}
-.pl-8{
-	padding-left: 2rem;
 }
 .text-center{
 	text-align: center;
@@ -2166,17 +2372,20 @@ select{
 .leading-4{
 	line-height: 1rem;
 }
+.leading-relaxed{
+	line-height: 1.625;
+}
 .leading-none{
 	line-height: 1;
 }
 .tracking-widest{
 	letter-spacing: 0.1em;
 }
-.tracking-wide{
-	letter-spacing: 0.025em;
-}
 .tracking-wider{
 	letter-spacing: 0.05em;
+}
+.tracking-wide{
+	letter-spacing: 0.025em;
 }
 .tracking-tight{
 	letter-spacing: -0.025em;
@@ -2245,6 +2454,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
+.text-blue-400{
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
 .text-blue-600{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -2256,10 +2469,6 @@ select{
 .text-red-400{
 	--tw-text-opacity: 1;
 	color: rgba(248, 113, 113, var(--tw-text-opacity));
-}
-.text-blue-400{
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .text-purple-400{
 	--tw-text-opacity: 1;
@@ -2529,9 +2738,17 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.hover\:text-blue-600:hover{
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
+}
 .hover\:text-white:hover{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-blue-400:hover{
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .hover\:text-gray-50:hover{
 	--tw-text-opacity: 1;
@@ -2662,6 +2879,10 @@ select{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(79, 70, 229, var(--tw-ring-opacity));
 }
+.focus\:ring-purple-600:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(124, 58, 237, var(--tw-ring-opacity));
+}
 .focus\:ring-opacity-50:focus{
 	--tw-ring-opacity: 0.5;
 }
@@ -2786,6 +3007,14 @@ select{
 	--tw-border-opacity: 1;
 	border-color: rgba(124, 58, 237, var(--tw-border-opacity));
 }
+.dark .dark\:border-gray-50{
+	--tw-border-opacity: 1;
+	border-color: rgba(249, 250, 251, var(--tw-border-opacity));
+}
+.dark .dark\:border-purple-400{
+	--tw-border-opacity: 1;
+	border-color: rgba(167, 139, 250, var(--tw-border-opacity));
+}
 .dark .dark\:border-gray-800{
 	--tw-border-opacity: 1;
 	border-color: rgba(31, 41, 55, var(--tw-border-opacity));
@@ -2876,6 +3105,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
+.dark .dark\:text-blue-300{
+	--tw-text-opacity: 1;
+	color: rgba(147, 197, 253, var(--tw-text-opacity));
+}
 .dark .dark\:text-gray-600{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
@@ -2891,10 +3124,6 @@ select{
 .dark .dark\:text-green-400{
 	--tw-text-opacity: 1;
 	color: rgba(52, 211, 153, var(--tw-text-opacity));
-}
-.dark .dark\:text-blue-300{
-	--tw-text-opacity: 1;
-	color: rgba(147, 197, 253, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-100{
 	--tw-text-opacity: 1;
@@ -3121,6 +3350,10 @@ select{
 	.sm\:text-left{
 		text-align: left;
 	}
+	.sm\:text-sm{
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
 }
 @media (min-width: 768px){
 	.md\:inset-0{
@@ -3173,6 +3406,9 @@ select{
 	.md\:ml-9{
 		margin-left: 2.25rem;
 	}
+	.md\:mt-8{
+		margin-top: 2rem;
+	}
 	.md\:block{
 		display: block;
 	}
@@ -3199,6 +3435,9 @@ select{
 	}
 	.md\:w-auto{
 		width: auto;
+	}
+	.md\:w-96{
+		width: 24rem;
 	}
 	.md\:w-10{
 		width: 2.5rem;
@@ -3239,6 +3478,10 @@ select{
 	}
 	.md\:gap-6{
 		gap: 1.5rem;
+	}
+	.md\:gap-x-4{
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
 	}
 	.md\:gap-y-14{
 		row-gap: 3.5rem;
@@ -3322,6 +3565,10 @@ select{
 		padding-left: 0.5rem;
 		padding-right: 0.5rem;
 	}
+	.md\:py-3{
+		padding-top: 0.75rem;
+		padding-bottom: 0.75rem;
+	}
 	.md\:pt-12{
 		padding-top: 3rem;
 	}
@@ -3330,6 +3577,9 @@ select{
 	}
 	.md\:pb-14{
 		padding-bottom: 3.5rem;
+	}
+	.md\:pr-40{
+		padding-right: 10rem;
 	}
 	.md\:pt-0\.5{
 		padding-top: 0.125rem;
