--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1247,6 +1247,10 @@ select{
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-3{
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
 .my-5{
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
@@ -1263,10 +1267,6 @@ select{
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
-.my-3{
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
-}
 .mx-1{
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
@@ -1274,6 +1274,14 @@ select{
 .mx-2{
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
+}
+.my-1\.5{
+	margin-top: 0.375rem;
+	margin-bottom: 0.375rem;
+}
+.my-1{
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 .mx-4{
 	margin-left: 1rem;
@@ -1348,11 +1356,11 @@ select{
 .mb-4{
 	margin-bottom: 1rem;
 }
-.mb-8{
-	margin-bottom: 2rem;
-}
 .mt-1\.5{
 	margin-top: 0.375rem;
+}
+.mb-8{
+	margin-bottom: 2rem;
 }
 .mr-4{
 	margin-right: 1rem;
@@ -1378,9 +1386,6 @@ select{
 .mt-48{
 	margin-top: 12rem;
 }
-.mb-5{
-	margin-bottom: 1.25rem;
-}
 .mt-16{
 	margin-top: 4rem;
 }
@@ -1392,6 +1397,9 @@ select{
 }
 .-mt-px{
 	margin-top: -1px;
+}
+.mb-5{
+	margin-bottom: 1.25rem;
 }
 .block{
 	display: block;
@@ -1449,6 +1457,9 @@ select{
 }
 .h-48{
 	height: 12rem;
+}
+.h-\[420px\]{
+	height: 420px;
 }
 .h-64{
 	height: 16rem;
@@ -1563,6 +1574,9 @@ select{
 }
 .w-2{
 	width: 0.5rem;
+}
+.w-36{
+	width: 9rem;
 }
 .min-w-0{
 	min-width: 0px;
@@ -1778,15 +1792,15 @@ select{
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-y-reverse: 0;
 	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
@@ -1803,15 +1817,15 @@ select{
 	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1rem * var(--tw-space-x-reverse));
 	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .space-y-1\.5 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-y-reverse: 0;
@@ -1961,11 +1975,11 @@ select{
 .border-r-4{
 	border-right-width: 4px;
 }
-.border-r-0{
-	border-right-width: 0px;
-}
 .border-l-2{
 	border-left-width: 2px;
+}
+.border-r-0{
+	border-right-width: 0px;
 }
 .border-r{
 	border-right-width: 1px;
@@ -2076,6 +2090,10 @@ select{
 	--tw-bg-opacity: 1;
 	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
 }
+.bg-purple-500{
+	--tw-bg-opacity: 1;
+	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
+}
 .bg-green-100{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
@@ -2087,10 +2105,6 @@ select{
 .bg-blue-500{
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-.bg-purple-500{
-	--tw-bg-opacity: 1;
-	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
 }
 .bg-transparent{
 	background-color: transparent;
@@ -2372,20 +2386,20 @@ select{
 .leading-4{
 	line-height: 1rem;
 }
-.leading-relaxed{
-	line-height: 1.625;
-}
 .leading-none{
 	line-height: 1;
+}
+.leading-relaxed{
+	line-height: 1.625;
 }
 .tracking-widest{
 	letter-spacing: 0.1em;
 }
-.tracking-wider{
-	letter-spacing: 0.05em;
-}
 .tracking-wide{
 	letter-spacing: 0.025em;
+}
+.tracking-wider{
+	letter-spacing: 0.05em;
 }
 .tracking-tight{
 	letter-spacing: -0.025em;
@@ -2454,10 +2468,6 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
-.text-blue-400{
-	--tw-text-opacity: 1;
-	color: rgba(96, 165, 250, var(--tw-text-opacity));
-}
 .text-blue-600{
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -2469,6 +2479,10 @@ select{
 .text-red-400{
 	--tw-text-opacity: 1;
 	color: rgba(248, 113, 113, var(--tw-text-opacity));
+}
+.text-blue-400{
+	--tw-text-opacity: 1;
+	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
 .text-purple-400{
 	--tw-text-opacity: 1;
@@ -2554,6 +2568,10 @@ select{
 }
 .shadow-inner{
 	--tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-2xl{
+	--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -2647,6 +2665,14 @@ select{
 }
 .ease-in{
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.first-letter\:text-8xl::first-letter{
+	font-size: 6rem;
+	line-height: 1;
+}
+.first-letter\:text-blue-800::first-letter{
+	--tw-text-opacity: 1;
+	color: rgba(30, 64, 175, var(--tw-text-opacity));
 }
 .focus-within\:text-purple-500:focus-within{
 	--tw-text-opacity: 1;
@@ -2855,6 +2881,11 @@ select{
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-1:focus{
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus\:ring-gray-300:focus{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(209, 213, 219, var(--tw-ring-opacity));
@@ -2995,6 +3026,10 @@ select{
 	--tw-divide-opacity: 1;
 	border-color: rgba(55, 65, 81, var(--tw-divide-opacity));
 }
+.dark .dark\:border-gray-600{
+	--tw-border-opacity: 1;
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
 .dark .dark\:border-gray-500{
 	--tw-border-opacity: 1;
 	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
@@ -3105,10 +3140,6 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
-.dark .dark\:text-blue-300{
-	--tw-text-opacity: 1;
-	color: rgba(147, 197, 253, var(--tw-text-opacity));
-}
 .dark .dark\:text-gray-600{
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
@@ -3124,6 +3155,10 @@ select{
 .dark .dark\:text-green-400{
 	--tw-text-opacity: 1;
 	color: rgba(52, 211, 153, var(--tw-text-opacity));
+}
+.dark .dark\:text-blue-300{
+	--tw-text-opacity: 1;
+	color: rgba(147, 197, 253, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-100{
 	--tw-text-opacity: 1;
@@ -3433,11 +3468,11 @@ select{
 	.md\:h-40{
 		height: 10rem;
 	}
-	.md\:w-auto{
-		width: auto;
-	}
 	.md\:w-96{
 		width: 24rem;
+	}
+	.md\:w-auto{
+		width: auto;
 	}
 	.md\:w-10{
 		width: 2.5rem;
@@ -3486,15 +3521,15 @@ select{
 	.md\:gap-y-14{
 		row-gap: 3.5rem;
 	}
-	.md\:space-x-2 > :not([hidden]) ~ :not([hidden]){
-		--tw-space-x-reverse: 0;
-		margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-		margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-	}
 	.md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
 		--tw-space-y-reverse: 0;
 		margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
 		margin-bottom: calc(0px * var(--tw-space-y-reverse));
+	}
+	.md\:space-x-2 > :not([hidden]) ~ :not([hidden]){
+		--tw-space-x-reverse: 0;
+		margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+		margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 	}
 	.md\:space-y-6 > :not([hidden]) ~ :not([hidden]){
 		--tw-space-y-reverse: 0;
@@ -3578,9 +3613,6 @@ select{
 	.md\:pb-14{
 		padding-bottom: 3.5rem;
 	}
-	.md\:pr-40{
-		padding-right: 10rem;
-	}
 	.md\:pt-0\.5{
 		padding-top: 0.125rem;
 	}
@@ -3589,6 +3621,9 @@ select{
 	}
 	.md\:pt-0{
 		padding-top: 0px;
+	}
+	.md\:pr-40{
+		padding-right: 10rem;
 	}
 	.md\:text-left{
 		text-align: left;
