Added Logo and dashboard count values

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1401,6 +1401,9 @@ select{
 .-ml-1{
 	margin-left: -0.25rem;
 }
+.ml-5{
+	margin-left: 1.25rem;
+}
 .-mt-px{
 	margin-top: -1px;
 }
@@ -2282,10 +2285,6 @@ select{
 	padding-top: 4rem;
 	padding-bottom: 4rem;
 }
-.py-0\.5{
-	padding-top: 0.125rem;
-	padding-bottom: 0.125rem;
-}
 .py-0{
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -2305,6 +2304,10 @@ select{
 .px-10{
 	padding-left: 2.5rem;
 	padding-right: 2.5rem;
+}
+.py-0\.5{
+	padding-top: 0.125rem;
+	padding-bottom: 0.125rem;
 }
 .pt-6{
 	padding-top: 1.5rem;
