Fixed group hover on Offer Section Icon

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3119,6 +3119,10 @@ select{
 	--tw-text-opacity: 1;
 	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
+.group:hover .group-hover\:text-purple-400{
+	--tw-text-opacity: 1;
+	color: rgba(167, 139, 250, var(--tw-text-opacity));
+}
 .group:hover .group-hover\:opacity-100{
 	opacity: 1;
 }
